[workspace]
members = [
    "h3",
    "h3-quinn",
    "h3-webtransport",
    "h3-datagram",

    # Internal
    "examples",
]
resolver = "2"

[patch.crates-io]
quinn = { git = "https://github.com/RelyVPN/quinn", branch = "main" }
quinn-proto = { git = "https://github.com/RelyVPN/quinn", branch = "main" }
