[package]
name = "examples"
version = "0.0.0"
publish = false
edition = "2024"

# If you copy one of the examples into a new project, you should be using
# [dependencies] instead.
[dev-dependencies]
anyhow = "*"
bytes = "*"
futures = "*"
h3 = { path = "../h3", features = ["tracing"] }
h3-quinn = { path = "../h3-quinn", features = ["tracing", "datagram"] }
h3-webtransport = { path = "../h3-webtransport" }
http = "*"
quinn = { version = "*", default-features = false, features = [
    "runtime-tokio",
    "rustls",
    "ring",
] }
rcgen = { version = "*" }
rustls = { version = "*", default-features = false, features = [
    "logging",
    "ring",
    "std",
] }
rustls-native-certs = "*"
structopt = "*"
tokio = { version = "*", features = ["full"] }
tracing = "*"
tracing-subscriber = { version = "*", default-features = false, features = [
    "fmt",
    "ansi",
    "env-filter",
    "time",
    "tracing-log",
] }
octets = "*"

tracing-tree = { version = "*" }
h3-datagram = { path = "../h3-datagram" }

[features]
tree = []

[[example]]
name = "client"
path = "client.rs"

[[example]]
name = "server"
path = "server.rs"

[[example]]
name = "webtransport_server"
path = "webtransport_server.rs"
