[package]
name = "h3-datagram"
version = "0.0.2"
edition = "2024"
documentation = "https://docs.rs/h3-datagram"
repository = "https://github.com/hyperium/h3"
readme = "readme.md"
description = "rfc9297 extension for the h3 crate"
keywords = ["http3", "quic", "rfc9297"]
categories = ["network-programming", "web-programming"]
license = "MIT"

[dependencies]
bytes = "*"
tracing = { version = "*", optional = true }

[features]
tracing = ["dep:tracing"]

[dependencies.h3]
version = "*"
path = "../h3"
features = ["i-implement-a-third-party-backend-and-opt-into-breaking-changes"]
