[package]
name = "h3-quinn"
version = "0.0.10"
authors = ["Jean-Christophe BEGUE <jc.begue@pm.me>"]
edition = "2024"
documentation = "https://docs.rs/h3-quinn"
repository = "https://github.com/hyperium/h3"
readme = "README.md"
description = "QUIC transport implementation based on Quinn."
keywords = ["http3", "quic", "h3"]
categories = ["network-programming", "web-programming"]
license = "MIT"

[dependencies]
h3 = { version = "*", path = "../h3" }
bytes = "*"
quinn = { version = "*", default-features = false, features = [
    "futures-io",
] }
tokio-util = { version = "*" }
futures-util = { version = "*", default-features = false }
h3-datagram = { version = "*", path = "../h3-datagram", optional = true }
tracing = { version = "*", optional = true }

[features]
tracing = ["dep:tracing"]
datagram = ["dep:h3-datagram"]
