[package]
name = "h3-webtransport"
version = "0.1.2"
edition = "2024"
documentation = "https://docs.rs/h3-webtransport"
repository = "https://github.com/hyperium/h3"
readme = "readme.md"
description = "webtransport extension for h3"
keywords = ["http3", "quic", "webtransport"]
categories = ["network-programming", "web-programming"]
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "*"
futures-util = { version = "*", default-features = false }
http = "*"
pin-project-lite = { version = "*", default-features = false }
tracing = "*"
tokio = { version = "*", default-features = false }
h3-datagram = { version = "*", path = "../h3-datagram" }

[dependencies.h3]
version = "*"
path = "../h3"
features = ["i-implement-a-third-party-backend-and-opt-into-breaking-changes"]
