[package]
name = "h3"
version = "0.0.8"
authors = [
    "Sean McArthur <sean@seanmonstar.com>",
    "Jean-Christophe BEGUE <jc.begue@pm.me>",
]
license = "MIT"
edition = "2024"
documentation = "https://docs.rs/h3"
repository = "https://github.com/hyperium/h3"
readme = "../README.md"
description = "An async HTTP/3 implementation."
keywords = ["http3", "quic", "h3"]
categories = [
    "network-programming",
    "web-programming::http-client",
    "web-programming::http-server",
]

[features]
i-implement-a-third-party-backend-and-opt-into-breaking-changes = []
tracing = ["dep:tracing"]

[dependencies]
bytes = "*"
futures-util = { version = "*", default-features = false, features = ["io"] }
http = "*"
tokio = { version = "*", features = ["sync"] }
pin-project-lite = { version = "*", default-features = false }
tracing = { version = "*", optional = true }
fastrand = "*"

[dev-dependencies]
assert_matches = "*"
futures-util = { version = "*", default-features = false, features = ["io"] }
proptest = "*"
quinn = { version = "*", default-features = false, features = [
    "runtime-tokio",
    "rustls",
    "ring",
] }
quinn-proto = { version = "*", default-features = false }
rcgen = "*"
rustls = { version = "*", default-features = false, features = ["logging", "ring", "std"] }
tokio = { version = "*", features = ["rt", "macros", "io-util", "io-std"] }
tracing-subscriber = { version = "*", default-features = false, features = [
    "fmt",
    "ansi",
    "env-filter",
    "time",
    "tracing-log",
] }
futures = { version = "*" }
tokio-util = { version = "*" }
h3-datagram = { path = "../h3-datagram" }
